<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_home_page"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/description_background_image"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background_image" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/muse"
        android:textAlignment="center"
        android:textColor="#990000"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/text_home_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/search_artists_songs_lyrics"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <!-- Line 1 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="80dp"
        android:background="#000000" />

</RelativeLayout>