<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- background image -->
    <ImageView
        android:id="@+id/background_image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="false"
        android:layout_centerVertical="false"
        android:contentDescription="@string/description_background_image"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background_image" />

    <!-- Welcome Banner -->
    <View
        android:id="@+id/welcome_banner"
        android:layout_width="340dp"
        android:layout_height="250dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/rectangle_1" />

    <!-- Welcome To Muse. -->

    <!-- Get Started -->
    <TextView
        android:id="@+id/welcome_to_muse"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="53dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/poppins_extrabold"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/welcome_to_muse"
        android:textAppearance="@style/welcome_to_muse" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_started_button"
        android:layout_width="232dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rectangle_2"
        android:elevation="4dp"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/get_started_button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#990000"
        android:textSize="24sp" />

</RelativeLayout>